remove login hash, use basic auth
