# api/mc-openapi.yaml
@@ -15,12 +15,12 @@ servers:
 
 paths:
   # Login
-  /login/{loginHash}:
+  /login:
     get:
       description: Log in to the storage array management controller
-      operationId: LoginGetByHash
-      parameters:
-      - $ref: '#/components/parameters/loginHash'
+      operationId: LoginGet
+      security:
+      - basicAuth: []
       responses:
         '200':
           description: OK
@@ -739,18 +739,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/statusObject'
 
-# Common parameters and schemas used by this API
+# Security, common parameters, and schemas used by this API
+security:
+- basicAuth: []
+
 components:
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
   parameters:
-    loginHash:
-      description: A SHA256 hash of the 'username_password' string
-      name: loginHash
-      in: path
-      required: true
-      schema:
-        type: string
-        maxLength: 64
-        example: '2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824'
     schemaId:
       description: A string label for a resource
       name: schemaId
