# internal/validator/cmd/main.go
@@ -4,10 +4,12 @@ package main
 
 import (
 	"context"
+	"fmt"
 	"os"
 
 	"github.com/Seagate/seagate-exos-x-api-go/internal/validator"
 
+	"github.com/Seagate/seagate-exos-x-api-go/pkg/client"
 	"github.com/Seagate/seagate-exos-x-api-go/pkg/common"
 
 	"k8s.io/klog/v2"
@@ -19,16 +21,20 @@ const (
 
 func main() {
 
-	// Use contextual logging with a default context
-	ctx := context.Background()
-	klog.EnableContextualLogging(true)
-	logger := klog.FromContext(ctx)
-
 	config, err := common.InitConfig(os.Args)
 	if err != nil {
-		logger.Error(err, "unable to init configuration")
+		fmt.Printf("unable to init configuration")
 		os.Exit(1)
 	}
+
+	// Use contextual logging with a context that stores basic authentication
+	ctx := context.WithValue(context.Background(), client.ContextBasicAuth, client.BasicAuth{
+		UserName: config.MCUsername,
+		Password: config.MCPassword,
+	})
+
+	klog.EnableContextualLogging(true)
+	logger := klog.FromContext(ctx)
 
 	// Set verbosity level according to ...
 	var l klog.Level
